fix animation on safari

--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,13 @@
         transform: translate(0, calc(150px - 1em));
         filter: blur(4px);
         max-height: 0;
-        margin: 0;
+        /*margin: 0;*/
     }
     90% {
         max-height: 5rem;
     }
     100% {
+        max-height: 5rem;
         opacity: 1;
         transform: translate(0, 0);
         filter: blur(0);
